order track: correction of the phase trimming and correction of the boundary conditions at the speed filtering

--- a/orderTrack.ipynb
+++ b/orderTrack.ipynb
@@ -20,7 +20,7 @@
     "from glob import glob\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib notebook\n",
+    "# %matplotlib notebook\n",
     "from scipy.signal import ellip, firwin, filtfilt, sosfreqz, sosfiltfilt\n",
     "from scipy.ndimage.filters import uniform_filter1d\n",
     "from scipy.fftpack import fft, fftfreq, next_fast_len\n",
@@ -88,17 +88,18 @@
     "    if 'sos' not in locals():\n",
     "        fs = 1 / x[0, 1]\n",
     "        sos = ellip(6, 1, 40, 2, btype='high', output='sos', fs=fs)\n",
-    "        plotFiltResponse(sos, fs)\n",
+    "#         plotFiltResponse(sos, fs)\n",
     "    temp = sosfiltfilt(sos, x[1, :])  \n",
     "    # looking for a file with activity\n",
     "    cond1 = (np.percentile(temp, 80) - np.percentile(temp, 20)) > 0.5\n",
     "    cond2 = x[1, :].mean() < 100\n",
     "    if (cond1 & cond2):\n",
-    "        plt.figure(figsize=[15, 5])\n",
-    "        plt.plot(x[0, :], x[1, :])\n",
-    "        plt.title(file.split('/')[-1])\n",
-    "        plt.show()\n",
-    "        filesMagnetic.append(file)"
+    "#         plt.figure(figsize=[15, 5])\n",
+    "#         plt.plot(x[0, :], x[1, :])\n",
+    "#         plt.title(file.split('/')[-1])\n",
+    "#         plt.show()\n",
+    "        filesMagnetic.append(file)\n",
+    "len(filesMagnetic)"
    ]
   },
   {
@@ -111,15 +112,20 @@
     "def orderTrack(xMagnetic, x, t, fs, b=firwin(9, 0.1), isPlot=False):\n",
     "    #this function implements the order-tracking and the speed estimation (which actually should be in another function)\n",
     "    crossLocs = np.where(np.diff(np.sign(xMagnetic - np.median(xMagnetic))))[0]\n",
+    "    # avoiding fault detection of crossing due to noise\n",
     "    crossLocs = crossLocs[np.where(np.diff(crossLocs)>30)]\n",
+    "    #avoiding sampling of half-cycle, which leads to leakage\n",
+    "    if crossLocs.shape[0] % 2:\n",
+    "        crossLocs = crossLocs[:-1]\n",
     "\n",
+    "    # locations of the estimated speed\n",
     "    speedLocs = (crossLocs[:-1] + crossLocs[1:]) / 2\n",
     "    speedTime = speedLocs / fs\n",
     "    # could skip estimation of the speed but it is nise to have it\n",
     "    speed = fs / np.diff(crossLocs) / 2\n",
     "    # due to higher harmonics, we have to filter. \n",
     "#     Here, I don't care that the distance between the samples is not constant\n",
-    "    filtSpeed = filtfilt(b, 1, speed)\n",
+    "    filtSpeed = filtfilt(b, 1, speed, padtype='even')\n",
     "    \n",
     "    # trimming the samples with a non-defined speed \n",
     "    cond = (t > speedTime[0]) & (t <speedTime[-1])\n",
@@ -133,13 +139,16 @@
     "    #phase in cycle units\n",
     "    phase = np.cumsum(interpSpeed) / fs \n",
     "    phase -= phase[0]\n",
-    "    interpFun = interp1d(phase, x, axis=0)\n",
+    "    # avoiding aliasing by sampling at least as fast as previously\n",
+    "    minDphase = np.min(speed) / fs\n",
     "    # finding the increment for a fast fft calculation\n",
-    "    dPhase = phase[-1] / next_fast_len(np.ceil(phase[-1] / (np.min(speed)  / fs)).astype(int))\n",
+    "    dPhase = phase[-1] / next_fast_len(np.ceil(phase[-1] / minDphase).astype(int))\n",
     "    resampledPhase = np.arange(0, phase[-1], dPhase)\n",
+    "    interpFun = interp1d(phase, x, axis=0)\n",
     "    resampledX = interpFun(resampledPhase)\n",
     "    \n",
     "    if isPlot:\n",
+    "    \n",
     "        plt.figure(figsize=[15, 5])\n",
     "        plt.plot(speedTime, speed)\n",
     "        plt.plot(speedTime, filtSpeed)\n",
@@ -147,6 +156,11 @@
     "        plt.xlabel('Time [sec]')\n",
     "        plt.ylabel('Shaft speed [Cycles / second]')\n",
     "        plt.plot()\n",
+    "        plt.show()\n",
+    "        \n",
+    "        plt.figure(figsize=[15, 5])\n",
+    "        plt.plot(t, xMagnetic)\n",
+    "        plt.title(file.split('/')[-1])\n",
     "        plt.show()\n",
     "\n",
     "    return resampledPhase, resampledX, t, phase, interpSpeed, x"
@@ -170,6 +184,7 @@
    "outputs": [],
    "source": [
     "for fileMagnetic in filesMagnetic:\n",
+    "    print(fileMagnetic)\n",
     "    filesVib = glob(fileMagnetic.split('_plane_')[0] + '*vibration*')\n",
     "    xVibration = np.concatenate([np.atleast_2d(np.load(file)[1, :]) for file in filesVib]).T\n",
     "    \n",
@@ -177,11 +192,6 @@
     "    t = x[0, :]\n",
     "    fs = 1 / (t[1] - t[0])\n",
     "    xMagnetic = x[1, :]\n",
-    "    \n",
-    "    plt.figure(figsize=[15, 5])\n",
-    "    plt.plot(t, xMagnetic)\n",
-    "    plt.title(file.split('/')[-1])\n",
-    "    plt.show()\n",
     "    \n",
     "    files = [fileMagnetic] + filesVib\n",
     "    x = np.concatenate([np.atleast_2d(xMagnetic).T, xVibration], axis=1)\n",
@@ -200,11 +210,11 @@
     "        plt.figure(figsize=[15, 5])\n",
     "\n",
     "        f = fftfreq(resampledX.shape[0], d=(resampledPhase[1] - resampledPhase[0]))\n",
-    "        xWind = resampledX[:, iSig] * np.hamming(resampledX.shape[0])\n",
+    "        xWind = resampledX[:, iSig] * np.hanning(resampledX.shape[0])\n",
     "        plt.plot(f[f > 0], np.log(np.abs(fft(xWind, n=resampledX.shape[0])))[f > 0])\n",
     "\n",
     "        f = fftfreq(100000, d=1 / fs)\n",
-    "        xWind = x[:, iSig] * np.hamming(x.shape[0])\n",
+    "        xWind = x[:, iSig] * np.hanning(x.shape[0])\n",
     "        plt.plot(f[f > 0] / speed.mean(), np.log(np.abs(fft(xWind, n=100000)))[f > 0])\n",
     "\n",
     "        plt.title(file.split('/')[-1])\n",
@@ -229,8 +239,7 @@
     "\n",
     "Points to improve:\n",
     "1. Trimming of the signal where the machine is off.\n",
-    "2. Avoid trimming at half-cycle rather than a full cycle.\n",
-    "3. figure out why we have DC."
+    "2. figure out why we have DC."
    ]
   },
   {
