separation of the order tracking from the speed estimation

--- a/orderTrack.ipynb
+++ b/orderTrack.ipynb
@@ -20,7 +20,7 @@
     "from glob import glob\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "# %matplotlib notebook\n",
+    "%matplotlib notebook\n",
     "from scipy.signal import ellip, firwin, filtfilt, sosfreqz, sosfiltfilt\n",
     "from scipy.ndimage.filters import uniform_filter1d\n",
     "from scipy.fftpack import fft, fftfreq, next_fast_len\n",
@@ -42,8 +42,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = glob('Buffer Crane - 6022c7d2dbf9880001a364e9/*magnetic*')\n",
-    "files[:5]"
+    "files = glob('60f5e7b1502edc0001230701/*magnetic*')\n",
+    "files"
    ]
   },
   {
@@ -56,7 +56,7 @@
     "def plotFiltResponse(sos, fs):\n",
     "    w, h = sosfreqz(sos, fs=fs, worN=200000)\n",
     "    dispCond = w < 20\n",
-    "    plt.figure(figsize=[15, 5])\n",
+    "    plt.figure(figsize=[9.5, 5])\n",
     "    plt.plot(w[dispCond], abs(h[dispCond]))\n",
     "    plt.title('Filter frequency response')\n",
     "    plt.xlabel('Frequency [radians / second]')\n",
@@ -87,19 +87,57 @@
     "    x = np.load(file)\n",
     "    if 'sos' not in locals():\n",
     "        fs = 1 / x[0, 1]\n",
-    "        sos = ellip(6, 1, 40, 2, btype='high', output='sos', fs=fs)\n",
+    "        sosHigh = ellip(8, 1, 40, 2, btype='high', output='sos', fs=fs)\n",
     "#         plotFiltResponse(sos, fs)\n",
-    "    temp = sosfiltfilt(sos, x[1, :])  \n",
+    "    temp = sosfiltfilt(sosHigh, x[1, :])  \n",
     "    # looking for a file with activity\n",
     "    cond1 = (np.percentile(temp, 80) - np.percentile(temp, 20)) > 0.5\n",
     "    cond2 = x[1, :].mean() < 100\n",
     "    if (cond1 & cond2):\n",
-    "#         plt.figure(figsize=[15, 5])\n",
-    "#         plt.plot(x[0, :], x[1, :])\n",
-    "#         plt.title(file.split('/')[-1])\n",
-    "#         plt.show()\n",
+    "        plt.figure(figsize=[9.5, 5])\n",
+    "        plt.plot(x[0, :], x[1, :])\n",
+    "        plt.title(file.split('/')[-1])\n",
+    "        plt.show()\n",
     "        filesMagnetic.append(file)\n",
     "len(filesMagnetic)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87acdbf9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getSpeed(xMagnetic, tMagnetic, b=firwin(9, 0.1), isPlot=False):\n",
+    "    # this function implements the speed estimation based on phase zero corssing and \n",
+    "    # lowpass filtering of the estimated speed\n",
+    "    crossLocs = np.where(np.diff(np.sign(xMagnetic - np.median(xMagnetic))))[0]\n",
+    "    # avoiding fault detection of crossing due to noise\n",
+    "    crossLocs = crossLocs[np.where(np.diff(crossLocs)>30)]\n",
+    "    #avoiding sampling of half-cycle, which leads to leakage\n",
+    "    if crossLocs.shape[0] % 2:\n",
+    "        crossLocs = crossLocs[:-1]\n",
+    "        # locations of the estimated speed\n",
+    "    speedLocs = (crossLocs[:-1] + crossLocs[1:]) / 2\n",
+    "    speedTime = speedLocs / fs\n",
+    "    # could skip estimation of the speed but it is nise to have it\n",
+    "    speed = fs / np.diff(crossLocs) / 2\n",
+    "    # due to the presence of higher harmonics in the signal, we have to filter the estimated speed. \n",
+    "    # Here, I don't care that the distance between the samples is not constant\n",
+    "    filtSpeed = filtfilt(b, 1, speed, padtype='even')\n",
+    "    \n",
+    "    if isPlot:\n",
+    "        plt.figure(figsize=[9.5, 5])\n",
+    "        plt.plot(speedTime, speed)\n",
+    "        plt.plot(speedTime, filtSpeed)\n",
+    "        plt.legend(['Gross speed estimation', 'Filtered speed estimtaton'])\n",
+    "        plt.xlabel('Time [sec]')\n",
+    "        plt.ylabel('Shaft speed [Cycles / second]')\n",
+    "        plt.plot()\n",
+    "        plt.show()\n",
+    "        \n",
+    "    return filtSpeed, speedTime"
    ]
   },
   {
@@ -109,59 +147,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def orderTrack(xMagnetic, x, t, fs, b=firwin(9, 0.1), isPlot=False):\n",
-    "    #this function implements the order-tracking and the speed estimation (which actually should be in another function)\n",
-    "    crossLocs = np.where(np.diff(np.sign(xMagnetic - np.median(xMagnetic))))[0]\n",
-    "    # avoiding fault detection of crossing due to noise\n",
-    "    crossLocs = crossLocs[np.where(np.diff(crossLocs)>30)]\n",
-    "    #avoiding sampling of half-cycle, which leads to leakage\n",
-    "    if crossLocs.shape[0] % 2:\n",
-    "        crossLocs = crossLocs[:-1]\n",
-    "\n",
-    "    # locations of the estimated speed\n",
-    "    speedLocs = (crossLocs[:-1] + crossLocs[1:]) / 2\n",
-    "    speedTime = speedLocs / fs\n",
-    "    # could skip estimation of the speed but it is nise to have it\n",
-    "    speed = fs / np.diff(crossLocs) / 2\n",
-    "    # due to higher harmonics, we have to filter. \n",
-    "#     Here, I don't care that the distance between the samples is not constant\n",
-    "    filtSpeed = filtfilt(b, 1, speed, padtype='even')\n",
+    "def orderTrack(x, t, speed, speedTime):\n",
+    "    #this function implements the order-tracking\n",
+    "    \n",
+    "    #setting x dimensionality \n",
+    "    x = np.atleast_2d(x)\n",
+    "    if (x.shape[1] > x.shape[0]):\n",
+    "        x = x.T\n",
     "    \n",
     "    # trimming the samples with a non-defined speed \n",
     "    cond = (t > speedTime[0]) & (t <speedTime[-1])\n",
-    "    x = np.atleast_2d(x)[cond, :]\n",
+    "    x = x[cond, :]\n",
     "    t = t[cond]\n",
     "    \n",
     "    #interpolation of speed\n",
-    "    interpSpeedFun = interp1d(speedTime, filtSpeed, axis=0)\n",
+    "    interpSpeedFun = interp1d(speedTime, speed, axis=0)\n",
     "    interpSpeed = interpSpeedFun(t)\n",
-    "    \n",
+    "     \n",
     "    #phase in cycle units\n",
-    "    phase = np.cumsum(interpSpeed) / fs \n",
+    "    phase = np.cumsum(interpSpeed) * (t[1] - t[0])\n",
     "    phase -= phase[0]\n",
     "    # avoiding aliasing by sampling at least as fast as previously\n",
-    "    minDphase = np.min(speed) / fs\n",
-    "    # finding the increment for a fast fft calculation\n",
+    "    minDphase = np.min(speed) * (t[1] - t[0])\n",
+    "    # finding the increment for a fast fft calculation - \n",
+    "    # considers having aggregation points at round shaft speed orders\n",
     "    dPhase = phase[-1] / next_fast_len(np.ceil(phase[-1] / minDphase).astype(int))\n",
     "    resampledPhase = np.arange(0, phase[-1], dPhase)\n",
     "    interpFun = interp1d(phase, x, axis=0)\n",
     "    resampledX = interpFun(resampledPhase)\n",
-    "    \n",
-    "    if isPlot:\n",
-    "    \n",
-    "        plt.figure(figsize=[15, 5])\n",
-    "        plt.plot(speedTime, speed)\n",
-    "        plt.plot(speedTime, filtSpeed)\n",
-    "        plt.legend(['Gross speed estimation', 'Filtered speed estimtaton'])\n",
-    "        plt.xlabel('Time [sec]')\n",
-    "        plt.ylabel('Shaft speed [Cycles / second]')\n",
-    "        plt.plot()\n",
-    "        plt.show()\n",
-    "        \n",
-    "        plt.figure(figsize=[15, 5])\n",
-    "        plt.plot(t, xMagnetic)\n",
-    "        plt.title(file.split('/')[-1])\n",
-    "        plt.show()\n",
     "\n",
     "    return resampledPhase, resampledX, t, phase, interpSpeed, x"
    ]
@@ -187,42 +200,70 @@
     "    print(fileMagnetic)\n",
     "    filesVib = glob(fileMagnetic.split('_plane_')[0] + '*vibration*')\n",
     "    xVibration = np.concatenate([np.atleast_2d(np.load(file)[1, :]) for file in filesVib]).T\n",
+    "    xVibration -= xVibration.mean(axis=0)\n",
+    "    tVibration = np.load(filesVib[0])[0, :]\n",
     "    \n",
     "    x = np.load(fileMagnetic)\n",
-    "    t = x[0, :]\n",
-    "    fs = 1 / (t[1] - t[0])\n",
+    "    tMagnetic = x[0, :]\n",
     "    xMagnetic = x[1, :]\n",
     "    \n",
-    "    files = [fileMagnetic] + filesVib\n",
-    "    x = np.concatenate([np.atleast_2d(xMagnetic).T, xVibration], axis=1)\n",
-    "    x -= x.mean(axis=0)\n",
+    "    speed, speedTime = getSpeed(xMagnetic, tMagnetic, isPlot=True)\n",
+    "    resampledPhase, resampledMagnetic, _, _, _, _ = orderTrack(xMagnetic, tMagnetic, speed, speedTime)\n",
     "    \n",
-    "    resampledPhase, resampledX, t, phase, speed, xTrimmed = orderTrack(xMagnetic, x, t, fs)\n",
-    "\n",
-    "    plt.figure(figsize=[15, 5])\n",
-    "    plt.plot(t, speed)\n",
-    "    plt.ylabel('Shaft speed [cycle / sec]')\n",
-    "    plt.xlabel('Time [sec]')\n",
+    "    plt.figure(figsize=[9.5, 5])\n",
+    "    \n",
+    "    f = fftfreq(resampledMagnetic.shape[0], d=(resampledPhase[1] - resampledPhase[0]))\n",
+    "    xWind = np.squeeze(resampledMagnetic) * np.hanning(resampledMagnetic.shape[0])\n",
+    "    dft = fft(xWind, n=xWind.shape[0])\n",
+    "    positiveCond = f > 0\n",
+    "    f = f[positiveCond]\n",
+    "    dft = dft[positiveCond]\n",
+    "    dft = np.log(np.abs(dft))\n",
+    "    plt.plot(f, dft)\n",
+    "    \n",
+    "    f = fftfreq(xMagnetic.shape[0], d=(tMagnetic[1] - tMagnetic[0]))\n",
+    "    xWind = np.squeeze(xMagnetic) * np.hanning(xMagnetic.shape[0])\n",
+    "    dft = fft(xWind, n=xWind.shape[0])\n",
+    "    positiveCond = f > 0\n",
+    "    f = f[positiveCond]\n",
+    "    dft = dft[positiveCond]\n",
+    "    dft = np.log(np.abs(dft))\n",
+    "    plt.plot(f / speed.mean(), dft)\n",
+    "    \n",
+    "    plt.xlabel('Shaft Speed Order [-] / Frequency normalized by mean speed')\n",
+    "    plt.ylabel('DFT-Absolute Value - log scale')\n",
+    "    plt.xlim([0, 10])\n",
+    "    plt.xticks(np.arange(11))\n",
     "    plt.grid()\n",
     "    plt.show()\n",
     "    \n",
-    "    for iSig, file in enumerate(files):\n",
-    "        plt.figure(figsize=[15, 5])\n",
+    "    resampledPhase, resampledVibration, t, _, _, _ = orderTrack(xVibration, tVibration, speed, speedTime)\n",
+    "    \n",
+    "    for iSig in np.arange(resampledVibration.shape[1]):\n",
+    "        plt.figure(figsize=[9.5, 5])\n",
     "\n",
-    "        f = fftfreq(resampledX.shape[0], d=(resampledPhase[1] - resampledPhase[0]))\n",
-    "        xWind = resampledX[:, iSig] * np.hanning(resampledX.shape[0])\n",
-    "        plt.plot(f[f > 0], np.log(np.abs(fft(xWind, n=resampledX.shape[0])))[f > 0])\n",
+    "        f = fftfreq(resampledVibration.shape[0], d=(resampledPhase[1] - resampledPhase[0]))\n",
+    "        xWind = np.squeeze(resampledVibration[:, iSig]) * np.hanning(resampledVibration.shape[0])\n",
+    "        dft = fft(xWind, n=xWind.shape[0])\n",
+    "        positiveCond = f > 0\n",
+    "        f = f[positiveCond]\n",
+    "        dft = dft[positiveCond]\n",
+    "        dft = np.log(np.abs(dft))\n",
+    "        plt.plot(f, dft)\n",
     "\n",
-    "        f = fftfreq(100000, d=1 / fs)\n",
-    "        xWind = x[:, iSig] * np.hanning(x.shape[0])\n",
-    "        plt.plot(f[f > 0] / speed.mean(), np.log(np.abs(fft(xWind, n=100000)))[f > 0])\n",
+    "        f = fftfreq(xVibration.shape[0], d=(tVibration[1] - tVibration[0]))\n",
+    "        xWind = np.squeeze(xVibration[:, iSig]) * np.hanning(tVibration.shape[0])\n",
+    "        dft = fft(xWind, n=xWind.shape[0])\n",
+    "        positiveCond = f > 0\n",
+    "        f = f[positiveCond]\n",
+    "        dft = dft[positiveCond]\n",
+    "        dft = np.log(np.abs(dft))\n",
+    "        plt.plot(f / speed.mean(), dft)\n",
     "\n",
-    "        plt.title(file.split('/')[-1])\n",
     "        plt.xlabel('Shaft Speed Order [-] / Frequency normalized by mean speed')\n",
     "        plt.ylabel('DFT-Absolute Value - log scale')\n",
-    "        plt.xlim([0, 10])\n",
-    "        plt.xticks(np.arange(10))\n",
-    "        plt.legend(['Order tracking', 'Original DFT'])\n",
+    "        plt.xlim([0, 30])\n",
+    "        plt.xticks(np.arange(31))\n",
     "        plt.grid()\n",
     "        plt.show()"
    ]
@@ -241,14 +282,6 @@
     "1. Trimming of the signal where the machine is off.\n",
     "2. figure out why we have DC."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5d58bdcb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
