created orderTrack project and created unit-test

--- a/orderTrack/orderTrack.ipynb
+++ b/orderTrack/orderTrack.ipynb
@@ -94,10 +94,6 @@
     "    cond1 = (np.percentile(temp, 80) - np.percentile(temp, 20)) > 0.5\n",
     "    cond2 = x[1, :].mean() < 100\n",
     "    if (cond1 & cond2):\n",
-    "        plt.figure(figsize=[9.5, 5])\n",
-    "        plt.plot(x[0, :], x[1, :])\n",
-    "        plt.title(file.split('/')[-1])\n",
-    "        plt.show()\n",
     "        filesMagnetic.append(file)\n",
     "len(filesMagnetic)"
    ]
@@ -105,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87acdbf9",
+   "id": "9757ed56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,6 +203,12 @@
     "    tMagnetic = x[0, :]\n",
     "    xMagnetic = x[1, :]\n",
     "    \n",
+    "    plt.figure(figsize=[9.5, 5])\n",
+    "    plt.plot(tMagnetic, xMagnetic)\n",
+    "    plt.xlabel('Time [sec]')\n",
+    "    plt.ylabel('Magnetic flux')\n",
+    "    plt.show()\n",
+    "    \n",
     "    speed, speedTime = getSpeed(xMagnetic, tMagnetic, isPlot=True)\n",
     "    resampledPhase, resampledMagnetic, _, _, _, _ = orderTrack(xMagnetic, tMagnetic, speed, speedTime)\n",
     "    \n",
@@ -231,7 +233,8 @@
     "    plt.plot(f / speed.mean(), dft)\n",
     "    \n",
     "    plt.xlabel('Shaft Speed Order [-] / Frequency normalized by mean speed')\n",
-    "    plt.ylabel('DFT-Absolute Value - log scale')\n",
+    "    plt.ylabel('DFT-Absolute Value (Magnetic Flux)')\n",
+    "    plt.legend(['Resampled signal', 'Original signal'])\n",
     "    plt.xlim([0, 10])\n",
     "    plt.xticks(np.arange(11))\n",
     "    plt.grid()\n",
@@ -248,7 +251,7 @@
     "        positiveCond = f > 0\n",
     "        f = f[positiveCond]\n",
     "        dft = dft[positiveCond]\n",
-    "        dft = np.log(np.abs(dft))\n",
+    "        dft = np.abs(dft)\n",
     "        plt.plot(f, dft)\n",
     "\n",
     "        f = fftfreq(xVibration.shape[0], d=(tVibration[1] - tVibration[0]))\n",
@@ -257,11 +260,12 @@
     "        positiveCond = f > 0\n",
     "        f = f[positiveCond]\n",
     "        dft = dft[positiveCond]\n",
-    "        dft = np.log(np.abs(dft))\n",
+    "        dft = np.abs(dft)\n",
     "        plt.plot(f / speed.mean(), dft)\n",
     "\n",
     "        plt.xlabel('Shaft Speed Order [-] / Frequency normalized by mean speed')\n",
-    "        plt.ylabel('DFT-Absolute Value - log scale')\n",
+    "        plt.ylabel('DFT-Absolute Value (Vibration)')\n",
+    "        plt.legend(['Resampled signal', 'Original signal'])\n",
     "        plt.xlim([0, 30])\n",
     "        plt.xticks(np.arange(31))\n",
     "        plt.grid()\n",
