orderTrack cleaned the notebook

--- a/orderTrack/orderTrack.ipynb
+++ b/orderTrack/orderTrack.ipynb
@@ -20,11 +20,10 @@
     "from glob import glob\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib notebook\n",
-    "from scipy.signal import ellip, firwin, filtfilt, sosfreqz, sosfiltfilt\n",
-    "from scipy.ndimage.filters import uniform_filter1d\n",
-    "from scipy.fftpack import fft, fftfreq, next_fast_len\n",
-    "from scipy.interpolate import interp1d"
+    "# %matplotlib notebook\n",
+    "figsize=[15, 5]\n",
+    "from scipy.signal import ellip, sosfreqz, sosfiltfilt, periodogram\n",
+    "from orderTrack.orderTrack import getSpeed, orderTrack"
    ]
   },
   {
@@ -56,7 +55,7 @@
     "def plotFiltResponse(sos, fs):\n",
     "    w, h = sosfreqz(sos, fs=fs, worN=200000)\n",
     "    dispCond = w < 20\n",
-    "    plt.figure(figsize=[9.5, 5])\n",
+    "    plt.figure(figsize=figsize)\n",
     "    plt.plot(w[dispCond], abs(h[dispCond]))\n",
     "    plt.title('Filter frequency response')\n",
     "    plt.xlabel('Frequency [radians / second]')\n",
@@ -99,83 +98,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9757ed56",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def getSpeed(xMagnetic, tMagnetic, b=firwin(9, 0.1), isPlot=False):\n",
-    "    # this function implements the speed estimation based on phase zero corssing and \n",
-    "    # lowpass filtering of the estimated speed\n",
-    "    crossLocs = np.where(np.diff(np.sign(xMagnetic - np.median(xMagnetic))))[0]\n",
-    "    # avoiding fault detection of crossing due to noise\n",
-    "    crossLocs = crossLocs[np.where(np.diff(crossLocs)>30)]\n",
-    "    #avoiding sampling of half-cycle, which leads to leakage\n",
-    "    if crossLocs.shape[0] % 2:\n",
-    "        crossLocs = crossLocs[:-1]\n",
-    "        # locations of the estimated speed\n",
-    "    speedLocs = (crossLocs[:-1] + crossLocs[1:]) / 2\n",
-    "    speedTime = speedLocs / fs\n",
-    "    # could skip estimation of the speed but it is nise to have it\n",
-    "    speed = fs / np.diff(crossLocs) / 2\n",
-    "    # due to the presence of higher harmonics in the signal, we have to filter the estimated speed. \n",
-    "    # Here, I don't care that the distance between the samples is not constant\n",
-    "    filtSpeed = filtfilt(b, 1, speed, padtype='even')\n",
-    "    \n",
-    "    if isPlot:\n",
-    "        plt.figure(figsize=[9.5, 5])\n",
-    "        plt.plot(speedTime, speed)\n",
-    "        plt.plot(speedTime, filtSpeed)\n",
-    "        plt.legend(['Gross speed estimation', 'Filtered speed estimtaton'])\n",
-    "        plt.xlabel('Time [sec]')\n",
-    "        plt.ylabel('Shaft speed [Cycles / second]')\n",
-    "        plt.plot()\n",
-    "        plt.show()\n",
-    "        \n",
-    "    return filtSpeed, speedTime"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "96329511",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def orderTrack(x, t, speed, speedTime):\n",
-    "    #this function implements the order-tracking\n",
-    "    \n",
-    "    #setting x dimensionality \n",
-    "    x = np.atleast_2d(x)\n",
-    "    if (x.shape[1] > x.shape[0]):\n",
-    "        x = x.T\n",
-    "    \n",
-    "    # trimming the samples with a non-defined speed \n",
-    "    cond = (t > speedTime[0]) & (t <speedTime[-1])\n",
-    "    x = x[cond, :]\n",
-    "    t = t[cond]\n",
-    "    \n",
-    "    #interpolation of speed\n",
-    "    interpSpeedFun = interp1d(speedTime, speed, axis=0)\n",
-    "    interpSpeed = interpSpeedFun(t)\n",
-    "     \n",
-    "    #phase in cycle units\n",
-    "    phase = np.cumsum(interpSpeed) * (t[1] - t[0])\n",
-    "    phase -= phase[0]\n",
-    "    # avoiding aliasing by sampling at least as fast as previously\n",
-    "    minDphase = np.min(speed) * (t[1] - t[0])\n",
-    "    # finding the increment for a fast fft calculation - \n",
-    "    # considers having aggregation points at round shaft speed orders\n",
-    "    dPhase = phase[-1] / next_fast_len(np.ceil(phase[-1] / minDphase).astype(int))\n",
-    "    resampledPhase = np.arange(0, phase[-1], dPhase)\n",
-    "    interpFun = interp1d(phase, x, axis=0)\n",
-    "    resampledX = interpFun(resampledPhase)\n",
-    "\n",
-    "    return resampledPhase, resampledX, t, phase, interpSpeed, x"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "06b0c16a",
    "metadata": {},
@@ -202,72 +124,48 @@
     "    x = np.load(fileMagnetic)\n",
     "    tMagnetic = x[0, :]\n",
     "    xMagnetic = x[1, :]\n",
+    "    fs = 1 / tMagnetic[1]\n",
     "    \n",
-    "    plt.figure(figsize=[9.5, 5])\n",
+    "    plt.figure(figsize=figsize)\n",
     "    plt.plot(tMagnetic, xMagnetic)\n",
     "    plt.xlabel('Time [sec]')\n",
     "    plt.ylabel('Magnetic flux')\n",
     "    plt.show()\n",
     "    \n",
-    "    speed, speedTime = getSpeed(xMagnetic, tMagnetic, isPlot=True)\n",
+    "    speed, speedTime = getSpeed(xMagnetic, fs, isPlot=True, figsize=figsize)\n",
     "    resampledPhase, resampledMagnetic, _, _, _, _ = orderTrack(xMagnetic, tMagnetic, speed, speedTime)\n",
     "    \n",
-    "    plt.figure(figsize=[9.5, 5])\n",
+    "    plt.figure(figsize=figsize)\n",
     "    \n",
-    "    f = fftfreq(resampledMagnetic.shape[0], d=(resampledPhase[1] - resampledPhase[0]))\n",
-    "    xWind = np.squeeze(resampledMagnetic) * np.hanning(resampledMagnetic.shape[0])\n",
-    "    dft = fft(xWind, n=xWind.shape[0])\n",
-    "    positiveCond = f > 0\n",
-    "    f = f[positiveCond]\n",
-    "    dft = dft[positiveCond]\n",
-    "    dft = np.log(np.abs(dft))\n",
-    "    plt.plot(f, dft)\n",
-    "    \n",
-    "    f = fftfreq(xMagnetic.shape[0], d=(tMagnetic[1] - tMagnetic[0]))\n",
-    "    xWind = np.squeeze(xMagnetic) * np.hanning(xMagnetic.shape[0])\n",
-    "    dft = fft(xWind, n=xWind.shape[0])\n",
-    "    positiveCond = f > 0\n",
-    "    f = f[positiveCond]\n",
-    "    dft = dft[positiveCond]\n",
-    "    dft = np.log(np.abs(dft))\n",
-    "    plt.plot(f / speed.mean(), dft)\n",
-    "    \n",
-    "    plt.xlabel('Shaft Speed Order [-] / Frequency normalized by mean speed')\n",
-    "    plt.ylabel('DFT-Absolute Value (Magnetic Flux)')\n",
+    "    resampFs = 1 / (resampledPhase[1] - resampledPhase[0])\n",
+    "    f, Pxx_den = periodogram(resampledMagnetic, resampFs, window='hanning')\n",
+    "    plt.semilogy(f, Pxx_den)\n",
+    "    f, Pxx_den = periodogram(xMagnetic, fs / speed.mean(), window='hanning')\n",
+    "    plt.semilogy(f, Pxx_den)\n",
     "    plt.legend(['Resampled signal', 'Original signal'])\n",
+    "    plt.xlabel('Shaft Speed Order [-] / Frequency normalized by mean speed')\n",
+    "    plt.ylabel('PSD [V**2]')\n",
     "    plt.xlim([0, 10])\n",
     "    plt.xticks(np.arange(11))\n",
     "    plt.grid()\n",
     "    plt.show()\n",
     "    \n",
     "    resampledPhase, resampledVibration, t, _, _, _ = orderTrack(xVibration, tVibration, speed, speedTime)\n",
+    "    fs = 1 / tVibration[1]\n",
+    "    resampFs = 1 / (resampledPhase[1] - resampledPhase[0])\n",
     "    \n",
     "    for iSig in np.arange(resampledVibration.shape[1]):\n",
-    "        plt.figure(figsize=[9.5, 5])\n",
-    "\n",
-    "        f = fftfreq(resampledVibration.shape[0], d=(resampledPhase[1] - resampledPhase[0]))\n",
-    "        xWind = np.squeeze(resampledVibration[:, iSig]) * np.hanning(resampledVibration.shape[0])\n",
-    "        dft = fft(xWind, n=xWind.shape[0])\n",
-    "        positiveCond = f > 0\n",
-    "        f = f[positiveCond]\n",
-    "        dft = dft[positiveCond]\n",
-    "        dft = np.abs(dft)\n",
-    "        plt.plot(f, dft)\n",
-    "\n",
-    "        f = fftfreq(xVibration.shape[0], d=(tVibration[1] - tVibration[0]))\n",
-    "        xWind = np.squeeze(xVibration[:, iSig]) * np.hanning(tVibration.shape[0])\n",
-    "        dft = fft(xWind, n=xWind.shape[0])\n",
-    "        positiveCond = f > 0\n",
-    "        f = f[positiveCond]\n",
-    "        dft = dft[positiveCond]\n",
-    "        dft = np.abs(dft)\n",
-    "        plt.plot(f / speed.mean(), dft)\n",
-    "\n",
-    "        plt.xlabel('Shaft Speed Order [-] / Frequency normalized by mean speed')\n",
-    "        plt.ylabel('DFT-Absolute Value (Vibration)')\n",
+    "        plt.figure(figsize=figsize)\n",
+    "        \n",
+    "        f, Pxx_den = periodogram(resampledVibration[:, iSig], resampFs, window='hanning')\n",
+    "        plt.plot(f, Pxx_den)\n",
+    "        f, Pxx_den = periodogram(xVibration[:, iSig], fs / speed.mean(), window='hanning')\n",
+    "        plt.plot(f, Pxx_den)\n",
     "        plt.legend(['Resampled signal', 'Original signal'])\n",
+    "        plt.xlabel('Shaft Speed Order [-] / Frequency normalized by mean speed')\n",
+    "        plt.ylabel('PSD [V**2]')\n",
     "        plt.xlim([0, 30])\n",
-    "        plt.xticks(np.arange(31))\n",
+    "        plt.xticks(np.arange(30))\n",
     "        plt.grid()\n",
     "        plt.show()"
    ]
