order track: polishing for input into the pipe

--- a/orderTrack/orderTrack.ipynb
+++ b/orderTrack/orderTrack.ipynb
@@ -23,7 +23,7 @@
     "# %matplotlib notebook\n",
     "figsize=[15, 5]\n",
     "from scipy.signal import ellip, sosfreqz, sosfiltfilt, periodogram\n",
-    "from orderTrack.orderTrack import getSpeed, orderTrack"
+    "from orderTrack import orderTrack, getSpeed"
    ]
   },
   {
@@ -41,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = glob('60f5e7b1502edc0001230701/*magnetic*')\n",
+    "files = glob('../60f5e7b1502edc0001230701/*magnetic*')\n",
     "files"
    ]
   },
