orderTrack included resampling to the CS

--- a/orderTrack/orderTrack.ipynb
+++ b/orderTrack/orderTrack.ipynb
@@ -21,7 +21,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "# %matplotlib notebook\n",
-    "figsize=[15, 5]\n",
+    "figsize=[19, 5]\n",
     "from scipy.signal import ellip, sosfreqz, sosfiltfilt, periodogram\n",
     "from orderTrack import orderTrack, getSpeed"
    ]
@@ -133,7 +133,7 @@
     "    plt.show()\n",
     "    \n",
     "    speed, speedTime = getSpeed(xMagnetic, fs, isPlot=True, figsize=figsize)\n",
-    "    resampledPhase, resampledMagnetic, _, _, _, _ = orderTrack(xMagnetic, tMagnetic, speed, speedTime)\n",
+    "    resampledMagnetic, resampledPhase, _, _, _, _ = orderTrack(xMagnetic, tMagnetic, speed, speedTime)\n",
     "    \n",
     "    plt.figure(figsize=figsize)\n",
     "    \n",
@@ -150,7 +150,7 @@
     "    plt.grid()\n",
     "    plt.show()\n",
     "    \n",
-    "    resampledPhase, resampledVibration, t, _, _, _ = orderTrack(xVibration, tVibration, speed, speedTime)\n",
+    "    resampledVibration, resampledPhase, _, _, _, _ = orderTrack(xVibration, tVibration, speed, speedTime)\n",
     "    fs = 1 / tVibration[1]\n",
     "    resampFs = 1 / (resampledPhase[1] - resampledPhase[0])\n",
     "    \n",
@@ -168,6 +168,94 @@
     "        plt.xticks(np.arange(30))\n",
     "        plt.grid()\n",
     "        plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58f3bf31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.signal import spectrogram\n",
+    "from scipy.fft import fftfreq, fft\n",
+    "\n",
+    "def getThresh(x, nSTD=5):\n",
+    "    return np.std(x) * nSTD + np.median(x)\n",
+    "\n",
+    "def getEESpec(CS):\n",
+    "    CS[CS < getThresh(CS)] = 0\n",
+    "    return CS.sum(axis=0)\n",
+    "\n",
+    "def getCCoh(x, fs, norm=True, speed=np.nan, speedTime=np.nan):\n",
+    "    f, t, Sxx = spectrogram(x,\n",
+    "                            fs=fs, window='hann', \n",
+    "                            nperseg=64, noverlap=32, nfft=256, \n",
+    "                            detrend='constant', return_onesided=True, \n",
+    "                            scaling='density', mode='psd')\n",
+    "    \n",
+    "    if not np.isnan(speed).all():\n",
+    "        Sxx, t, _, _, _, _ = orderTrack(Sxx, t, speed, speedTime)\n",
+    "        Sxx = Sxx.T\n",
+    "    \n",
+    "    fMod = fftfreq(t.shape[0], d=t[1] - t[0])\n",
+    "    SxxDetrend = Sxx - np.atleast_2d(Sxx.mean(axis=1)).T\n",
+    "    CS = np.abs(fft(SxxDetrend, t.shape[0], norm='forward'))\n",
+    "    if norm:\n",
+    "        CS = np.abs(CS / np.atleast_2d(np.median(CS, axis=1)).T)\n",
+    "    CS[f < 1000, :] = 0\n",
+    "    return fMod, f, CS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3558185d",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "fs = 1 / tVibration[1]\n",
+    "for a in range(3):\n",
+    "    fMod, f, CCoh = getCCoh(xVibration[:, a], fs)\n",
+    "\n",
+    "    cond = fMod > 0\n",
+    "    vminVal = np.min(CCoh)\n",
+    "    vmaxVal = np.percentile(CCoh, 99.95)\n",
+    "    fMod = fMod[cond]\n",
+    "    CCoh = CCoh[:, cond]\n",
+    "    \n",
+    "    plt.figure(figsize=figsize)\n",
+    "    plt.pcolormesh(fMod, f, CCoh, vmin = vminVal, vmax = vmaxVal)\n",
+    "    plt.ylabel('Carrier Frequency [Hz]')\n",
+    "    plt.xlabel(r'Modulation Frequency [Hz]')\n",
+    "    plt.show()\n",
+    "    \n",
+    "    fMod2, f2, CCoh2 = getCCoh(xVibration[:, a], fs, True, speed, speedTime)\n",
+    "\n",
+    "    cond = fMod2 > 0\n",
+    "    vminVal2 = np.min(CCoh2)\n",
+    "    vmaxVal2 = np.percentile(CCoh2, 99.95)\n",
+    "    fMod2 = fMod2[cond]\n",
+    "    CCoh2 = CCoh2[:, cond]\n",
+    "    \n",
+    "    plt.figure(figsize=figsize)\n",
+    "    plt.pcolormesh(fMod2, f2, CCoh2, vmin = vminVal2, vmax = vmaxVal2)\n",
+    "    plt.ylabel('Carrier Frequency [Hz]')\n",
+    "    plt.xlabel(r'Modulation Shaft Speed Order [Hz]')\n",
+    "    plt.show()\n",
+    "    \n",
+    "    plt.figure(figsize=figsize)\n",
+    "    plt.plot(fMod2, getEESpec(CCoh2), linewidth=3)\n",
+    "    plt.plot(fMod / speed.mean(), getEESpec(CCoh), linewidth=3)\n",
+    "    plt.legend(['Resampled', 'Original'])\n",
+    "    plt.ylabel('Enhanced Envelope Spectrum')\n",
+    "    plt.xlabel(r'Modulation Shaft Speed Order [Hz]|Modulation Frequency [Hz]')\n",
+    "    plt.xticks(np.arange(np.floor(fMod2[-1])))\n",
+    "    plt.xlim([fMod2[0], fMod2[-1]])\n",
+    "    plt.grid()\n",
+    "    plt.show()"
    ]
   },
   {
