solved the minor bugs allowing running all the machines that operates continuously

--- a/orderTrack/orderTrack.ipynb
+++ b/orderTrack/orderTrack.ipynb
@@ -41,7 +41,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = glob('../60f5e7b1502edc0001230701/*magnetic*')\n",
+    "files = glob('../Buffer Crane - 6022c7d2dbf9880001a364e9/*magnetic*') \n",
+    "files += glob('../60f5e7b1502edc0001230701/*magnetic*')\n",
     "files"
    ]
   },
@@ -117,7 +118,12 @@
     "for fileMagnetic in filesMagnetic:\n",
     "    print(fileMagnetic)\n",
     "    filesVib = glob(fileMagnetic.split('_plane_')[0] + '*vibration*')\n",
-    "    xVibration = np.concatenate([np.atleast_2d(np.load(file)[1, :]) for file in filesVib]).T\n",
+    "    vibData = [np.atleast_2d(np.load(file)[1, :]) for file in filesVib]\n",
+    "    if np.all(np.diff([d.shape[1] for d in vibData]) == 0):\n",
+    "        xVibration = np.concatenate(vibData).T\n",
+    "    else:\n",
+    "        print(\"size differences in the vibration files of \" + fileMagnetic)\n",
+    "        continue\n",
     "    xVibration -= xVibration.mean(axis=0)\n",
     "    tVibration = np.load(filesVib[0])[0, :]\n",
     "    \n",
@@ -130,9 +136,12 @@
     "    plt.plot(tMagnetic, xMagnetic)\n",
     "    plt.xlabel('Time [sec]')\n",
     "    plt.ylabel('Magnetic flux')\n",
+    "    plt.grid()\n",
     "    plt.show()\n",
     "    \n",
     "    speed, speedTime = getSpeed(xMagnetic, fs, isPlot=True, figsize=figsize)\n",
+    "    if speed is None:\n",
+    "        continue\n",
     "    resampledMagnetic, resampledPhase, _, _, _, _ = orderTrack(xMagnetic, tMagnetic, speed, speedTime)\n",
     "    \n",
     "    plt.figure(figsize=figsize)\n",
@@ -168,6 +177,16 @@
     "        plt.xticks(np.arange(30))\n",
     "        plt.grid()\n",
     "        plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "623e08a2",
+   "metadata": {},
+   "source": [
+    "### cyclo-non-stationary analysis\n",
+    "Following presented an attempt to integrate the cyclostationarity with the angular resampling inspired by \n",
+    "Abboud, Dany, et al. \"The spectral analysis of cyclo-non-stationary signals.\" Mechanical Systems and Signal Processing (2016). It is yet not finished by it shows some potential..."
    ]
   },
   {
