drowio file and automatically deletingnon-relevant .npy files

--- a/orderTrack/orderTrack.ipynb
+++ b/orderTrack/orderTrack.ipynb
@@ -41,8 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = glob('../Buffer Crane - 6022c7d2dbf9880001a364e9/*magnetic*') \n",
-    "files += glob('../60f5e7b1502edc0001230701/*magnetic*')\n",
+    "files = glob('data/*/*magnetic*')\n",
     "files"
    ]
   },
@@ -82,6 +81,7 @@
    },
    "outputs": [],
    "source": [
+    "import os\n",
     "filesMagnetic = []\n",
     "for file in files:\n",
     "    x = np.load(file)\n",
@@ -95,6 +95,9 @@
     "    cond2 = x[1, :].mean() < 100\n",
     "    if (cond1 & cond2):\n",
     "        filesMagnetic.append(file)\n",
+    "    else:\n",
+    "        for file in glob(file.split('_plane_')[0] + '*'):\n",
+    "            os.remove(file) \n",
     "len(filesMagnetic)"
    ]
   },
