order track bug fix etc.

--- a/orderTrack/orderTrack.ipynb
+++ b/orderTrack/orderTrack.ipynb
@@ -142,7 +142,7 @@
     "    plt.grid()\n",
     "    plt.show()\n",
     "    \n",
-    "    speed, speedTime = getSpeed(xMagnetic, fs, isPlot=True, figsize=figsize)\n",
+    "    speed, speedTime = getSpeed(xMagnetic, fs, maxValidSpeedDiff=10, isPlot=True, figsize=figsize)\n",
     "    if speed is None:\n",
     "        continue\n",
     "    resampledMagnetic, resampledPhase, _, _, _, _ = orderTrack(xMagnetic, tMagnetic, speed, speedTime)\n",
@@ -158,7 +158,7 @@
     "    plt.xlabel('Shaft Speed Order [-] / Frequency normalized by mean speed')\n",
     "    plt.ylabel('PSD [V**2]')\n",
     "    plt.xlim([0, 10])\n",
-    "    plt.xticks(np.arange(11))\n",
+    "    plt.xticks(np.arange(10))\n",
     "    plt.grid()\n",
     "    plt.show()\n",
     "    \n",
