--- a/HPS/HarmonicProductSpectrum.ipynb
+++ b/HPS/HarmonicProductSpectrum.ipynb
@@ -10,6 +10,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from scipy.signal import periodogram, medfilt2d\n",
+    "from scipy.interpolate import interp1d\n",
     "from scipy.fftpack import next_fast_len"
    ]
   },
@@ -21,8 +22,9 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib notebook\n",
-    "figsize=[9.5 , 5]"
+    "# %matplotlib notebook\n",
+    "figsize=[19 , 5]\n",
+    "isPlot = False"
    ]
   },
   {
@@ -32,18 +34,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "maxFreq = 100\n",
-    "maxHarmonic = 25\n",
+    "maxFreq = 60\n",
+    "maxHarmonic = 50\n",
     "peddingFactor = 100\n",
     "detectionThresh = 2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1841855f",
-   "metadata": {},
-   "source": [
-    "# consider using the axial direction"
    ]
   },
   {
@@ -54,105 +48,93 @@
    "outputs": [],
    "source": [
     "t = pd.read_csv('Hwp - motor - bearing 1- 12_16_16 - 18_12.csv').iloc[:, 0].values\n",
+    "\n",
     "x = pd.concat([\n",
-    "    pd.read_csv('Hwp - motor - bearing 1- 12_16_16 - 18_12.csv').iloc[:, 2:],\n",
-    "    pd.read_csv('Hwp - motor - bearing 2- 12_16_16 - 18_12.csv').iloc[:, 2:],\n",
+    "    pd.read_csv('Hwp - motor - bearing 1- 12_16_16 - 18_12.csv').iloc[:, 1:],\n",
+    "    pd.read_csv('Hwp - motor - bearing 2- 12_16_16 - 18_12.csv').iloc[:, 1:],\n",
     "              ], axis=1).values\n",
-    "x"
+    "x.shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "33105274",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
+    "# first phase for white signal estimation:\n",
+    "nfft = next_fast_len(x.shape[0])\n",
+    "f, pxx = periodogram(x, fs=1 / t[1], return_onesided=True, axis=0, nfft=nfft)\n",
+    "cond = f < maxFreq * maxHarmonic * 1.1\n",
+    "pxx = pxx[cond]\n",
+    "f = f[cond]\n",
+    "\n",
+    "winSize = (np.round(10/ f[1] / 2) * 2).astype(int) + 1\n",
+    "pxxMed = medfilt2d(np.log(pxx), (winSize, 1))\n",
+    "interpFuns = [interp1d(f, pxxMed[:, channel]) for channel in range(pxxMed.shape[1])]\n",
+    "\n",
+    "# upsampled spectrum for later HPS with better resolution:\n",
     "nfft = next_fast_len(x.shape[0]) * peddingFactor\n",
-    "f, pxx = periodogram(x, fs=1 / t[1], return_onesided=True, axis=0, nfft=nfft)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dcdab793",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "f, pxx = periodogram(x, fs=1 / t[1], return_onesided=True, axis=0, nfft=nfft)\n",
     "cond = f < maxFreq * maxHarmonic\n",
     "pxx = pxx[cond]\n",
-    "f = f[cond]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "938727e3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# here the computation time can be reduced by decimation\n",
-    "winSize = (np.round(10/ f[1] / 2) * 2).astype(int) + 1\n",
-    "pxxMed = medfilt2d(np.log(pxx), (winSize, 1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "39916e05",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "for c in range(pxx.shape[1]):\n",
-    "    plt.figure(figsize=figsize)\n",
-    "    cond = (f < maxFreq) & (f > 5)\n",
-    "    plt.plot(f[cond], np.log(pxx[cond, c]))\n",
-    "    plt.plot(f[cond], pxxMed[cond, c])\n",
-    "    plt.grid()\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b1feb1e5",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
+    "f = f[cond]\n",
+    "\n",
+    "# pre-whitening section:\n",
+    "pxxMed = np.concatenate([np.atleast_2d(interpFun(f)) for interpFun in interpFuns], axis=0).T\n",
     "logPxxDetrand = np.log(pxx) - pxxMed\n",
+    "\n",
+    "# thresholding\n",
     "logPxxDetrand[logPxxDetrand < detectionThresh] = 0\n",
     "logPxxDetrand += 1\n",
+    "# channel product\n",
     "probAxisProd = np.prod(logPxxDetrand, axis=1)\n",
     "\n",
+    "# Harmonic Product spectrum implementation:\n",
     "nSearch = (f < maxFreq).sum()\n",
     "probHarmonicProd = np.ones((nSearch, ))\n",
-    "\n",
-    "viewCond = (f[:nSearch] > 15) & (f[:nSearch] < 40)\n",
-    "    \n",
+    "maxLoc = [] #monitoring variable\n",
+    "snr = [] #monitoring variable\n",
     "for harmonic in range(1, maxHarmonic + 1):\n",
-    "    plt.figure(figsize=figsize)\n",
-    "    before = probHarmonicProd.copy()\n",
     "    probHarmonicProd *= probAxisProd[:nSearch * harmonic:harmonic]\n",
-    "    plt.title(\"Harmonic No. {harmonic}\".format(harmonic=harmonic))\n",
-    "    plt.semilogy(f[:nSearch][viewCond], probHarmonicProd[viewCond])\n",
-    "    plt.semilogy(f[:nSearch][viewCond], before[viewCond])\n",
-    "    plt.legend(['after', 'before'])\n",
-    "    plt.grid()\n",
-    "    plt.show()"
+    "    \n",
+    "    # monitoring and visualization:\n",
+    "    maxLoc.append(np.argmax(probHarmonicProd))\n",
+    "    snr.append(probHarmonicProd[maxLoc[-1]] / probHarmonicProd.mean())\n",
+    "    if isPlot:\n",
+    "        plt.figure(figsize=figsize)\n",
+    "        plt.title(\"Harmonic No. {harmonic}\".format(harmonic=harmonic))\n",
+    "        plt.semilogy(f[:nSearch], probHarmonicProd)\n",
+    "        plt.semilogy(f[:nSearch], probHarmonicProd / probAxisProd[:nSearch * harmonic:harmonic])\n",
+    "        plt.legend(['after', 'before'])\n",
+    "        plt.grid()\n",
+    "        plt.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94b4a628",
+   "id": "06c447a4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "f[np.argmax(probHarmonicProd[f[:nSearch] < 50])]"
+    "plt.figure(figsize=figsize)\n",
+    "plt.plot(f[maxLoc] - f[maxLoc[-1]])\n",
+    "plt.ylabel('$\\Delta$ f [Hz]')\n",
+    "plt.xlabel('Harmonic')\n",
+    "plt.ylim([-0.025, 0.025])\n",
+    "plt.grid()\n",
+    "plt.show()\n",
+    "\n",
+    "plt.figure(figsize=figsize)\n",
+    "plt.plot(snr)\n",
+    "plt.xlabel('Harmonic')\n",
+    "plt.grid()\n",
+    "plt.ylabel('frac{Max Peak}{Mean value}')\n",
+    "plt.show()"
    ]
   }
  ],
